# v2mp

./: .gitignore  .gitmodules  CMakeLists.txt  Device port state diagram.drawio  README.md  V2MP.md
docs/: Assembly.md  (+2 more)
src/executables/v2mpasm/: CMakeLists.txt
src/executables/v2mpasm/configure/: Version.h.in
src/executables/v2mpasm/src/: CommandLineArgs.h  Main.c  Main.cpp  V2MPAsmArgumentParser.cpp  V2MPAsmArgumentParser.h
src/executables/v2mpexplorer/: CMakeLists.txt
src/executables/v2mpexplorer/src/: Main.cpp
src/executables/v2mplink/: CMakeLists.txt
src/executables/v2mplink/configure/: Version.h.in
src/executables/v2mplink/src/: CommandLineArgs.h  Main.cpp  V2MPLinkArgumentParser.cpp  V2MPLinkArgumentParser.h
src/libraries/libbaseutil/: CMakeLists.txt
src/libraries/libbaseutil/include/LibBaseUtil/: Array.h  Filesystem.h  Heap.h  String.h  UTHash_V2MP.h  Util.h
src/libraries/libbaseutil/src/: Heap.c  String.c  Util.c
src/libraries/libsharedcomponents/: CMakeLists.txt
src/libraries/libsharedcomponents/include/LibSharedComponents/: CircularBuffer.h  DoubleLinkedList.h
src/libraries/libsharedcomponents/src/: CircularBuffer.c  DoubleLinkedList.c  HexTree.c
src/libraries/libtoolchaincomponents/: CMakeLists.txt
src/libraries/libtoolchaincomponents/include/LibToolchainComponents/: FilePool.h  InputFile.h  OutputFile.h
src/libraries/libtoolchaincomponents/src/: FilePool.cpp  InputFile.cpp  OutputFile.cpp
src/libraries/libv2mp/: CMakeLists.txt
src/libraries/libv2mp/configure/: Interface_Version.c.in  Interface_Version.h.in  LibExport.h.in
src/libraries/libv2mp/src/: .gitignore  Dummy.c  Interface_Version.c
src/libraries/libv2mpasm/: CMakeLists.txt
src/libraries/libv2mpasm/configure/: Interface_Version.cpp.in  Interface_Version.h.in  LibExport.h.in
src/libraries/libv2mpasm/src/: .gitignore  Interface_Assembler.cpp  Interface_Assembler.h  Interface_Exception.cpp  Interface_Exception.h  Interface_Version.cpp  Interface_Version.h
src/libraries/libv2mpinternal/: CMakeLists.txt
src/libraries/libv2mplink/: CMakeLists.txt
src/libraries/libv2mplink/configure/: Interface_Version.h.in  LibExport.h.in
src/libraries/libv2mplink/src/: Dummy.cpp  Interface_Exception.cpp  Interface_Exception.h  Interface_Linker.cpp  Interface_Linker.h  Interface_Version.cpp
src/libraries/shared_components/: CMakeLists.txt
src/libraries/shared_components/src/: CircularBuffer.c  DoubleLinkedList.c  HexTree.c
src/libraries/v2mp/: CMakeLists.txt
src/libraries/v2mp/configure/: LibExport.h.in
src/libraries/v2mp_asm/: CMakeLists.txt
src/libraries/v2mp_asm/configure/: LibExport.h.in
src/libraries/v2mp_asm/src/: AsmException.c  AsmException_Internal.c  AsmException_Internal.h  Assembler.c  Defs.h  Dummy.cpp  InputFile.c  InputFile.h  InputFile_Internal.c  InputFile_Internal.h  Interface_Assembler.cpp  Interface_Exception.cpp  Interface_Exception.h  ParseContext.c  ParseContext.h  ParseException.c  ParseException_Internal.c  ParseException_Internal.h  Parser.c  Parser_Internal.h  Parser_ParseInstruction.c  Parser_ParseInstruction.h  Parser_ParseLabel.c  Parser_ParseLabel.h  Parser_ResolveReferences.c  Parser_ResolveReferences.h  Parser_Routines.c  Parser_Routines.h  Parsing.c  Parsing.h  TempTest.c  TokenMeta.c  TokenMeta.h
src/libraries/v2mp_internal/: CMakeLists.txt
tests/: CMakeLists.txt
tests/catch2/: CMakeLists.txt
tests/tests/: CMakeLists.txt
tests/tests/src/: AddInstruction.cpp  AssignmentInstruction.cpp  BitShiftInstruction.cpp  BitwiseANDInstruction.cpp  BitwiseNOTInstruction.cpp  BitwiseORInstruction.cpp  BitwiseXORInstruction.cpp  ConditionalBranchInstruction.cpp  HaltInstruction.cpp  LoadStoreInstruction.cpp  SubtractInstruction.cpp
tests/tests/src/Components/: CircularBuffer.cpp
tests/tests/src/Helpers/: Assembly.h  BaseMockDevice.cpp  BaseMockDevice.h  EmitterMockDevice.cpp  EmitterMockDevice.h  MinimalVirtualMachine.cpp  MinimalVirtualMachine.h  MockDevice.cpp  MockDevice.h  SinkMockDevice.cpp  SinkMockDevice.h  TestHarnessVM.cpp  TestHarnessVM.h
tests/tests/src/Instructions/: AddInstruction.cpp  AssignmentInstruction.cpp  BitShiftInstruction.cpp  BitwiseANDInstruction.cpp  BitwiseNOTInstruction.cpp  BitwiseORInstruction.cpp  BitwiseXORInstruction.cpp  ConditionalBranchInstruction.cpp  DevicePortOperationInstruction.cpp  DevicePortQueryInstruction.cpp  DevicePortReadInstruction.cpp  DevicePortWriteInstruction.cpp  DivideInstruction.cpp  HaltInstruction.cpp  LoadStoreInstruction.cpp  MultiplyInstruction.cpp  NopInstruction.cpp  RaiseSignalInstruction.cpp  StackOperationInstruction.cpp  SubtractInstruction.cpp
tests/tests/src/Modules/: DevicePorts.cpp
tests/tests_v2mp/: CMakeLists.txt
tests/tests_v2mp/src/Components/: CircularBuffer.cpp
tests/tests_v2mp/src/Helpers/: TestHarnessVM.cpp  TestHarnessVM.h
tests/tests_v2mp/src/Instructions/: AddInstruction.cpp  AssignmentInstruction.cpp  BitShiftInstruction.cpp  BitwiseANDInstruction.cpp  BitwiseNOTInstruction.cpp  BitwiseORInstruction.cpp  BitwiseXORInstruction.cpp  ConditionalBranchInstruction.cpp  DivideInstruction.cpp  LoadStoreInstruction.cpp  MultiplyInstruction.cpp  NopInstruction.cpp  RaiseSignalInstruction.cpp  StackOperationInstruction.cpp  SubtractInstruction.cpp
tests/tests_v2mpasm/: CMakeLists.txt
tests/tests_v2mpasm/src/: AddTests.cpp  AsgnTests.cpp  BitwTests.cpp  CbxTests.cpp  DivTests.cpp  Dummy.cpp  ExceptionAPI.cpp  ExceptionIDs.h  Labels.cpp  LanguageFeatures.cpp  LdstTests.cpp  MulTests.cpp  NopTests.cpp  ProgramVerification.cpp  ProgramVerification.h  ShftTests.cpp  SigTests.cpp  SingleInstructions.cpp  StkTests.cpp  SubTests.cpp
tests/tests_v2mplink/: CMakeLists.txt
tests/testutil/: CMakeLists.txt
tests/testutil/include/TestUtil/: Assembly.h
v2mp/: CMakeLists.txt
v2mp/include/V2MP/: CPU.h  Defs.h  DevicePort.h  DevicePortStore.h  Dummy.h  MemoryStore.h  Types.h
v2mp/src/: CPU.c  DevicePort.c  DevicePortStore.c  Dummy.c  MemoryStore.c
v2mp/src/DataStructures/: CircularBuffer.c  CircularBuffer.h  HexTree.c  HexTree.h
v2mp/src/Util/: Util.h
(+320 files in other folders)
