configure_file(
	"${CMAKE_CURRENT_SOURCE_DIR}/configure/LibExport.h.in"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/${TARGETNAME_V2MP}/LibExport.h"
)

set(PUBLIC_HEADERS_GENERAL
	include/${TARGETNAME_V2MP}/Dummy.h
	include/${TARGETNAME_V2MP}/LibExport.h
)

set(PUBLIC_HEADERS_ALL
	${PUBLIC_HEADERS_GENERAL}
)

set(SOURCES_ALL
	src/Dummy.c
)

if(BUILD_SHARED_LIBS)
	add_library(${TARGETNAME_V2MP} SHARED ${PUBLIC_HEADERS_ALL} ${SOURCES_ALL})
else()
	add_library(${TARGETNAME_V2MP} STATIC ${PUBLIC_HEADERS_ALL} ${SOURCES_ALL})
endif()

target_include_directories(${TARGETNAME_V2MP} PUBLIC include)
target_include_directories(${TARGETNAME_V2MP} PRIVATE src)

target_link_libraries(${TARGETNAME_V2MP} PRIVATE ${TARGETNAME_V2MP_INTERNAL})

target_compile_definitions(${TARGETNAME_V2MP} PRIVATE "V2MP_PRODUCER")

install(TARGETS ${TARGETNAME_V2MP}
	ARCHIVE DESTINATION ${TARGETNAME_V2MP}/lib
	LIBRARY DESTINATION ${TARGETNAME_V2MP}/lib
	RUNTIME DESTINATION ${TARGETNAME_V2MP}/bin
)

install(FILES ${PUBLIC_HEADERS_GENERAL} DESTINATION ${TARGETNAME_V2MP}/include/${TARGETNAME_V2MP})
